--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <link rel="stylesheet" href="./resources/qgis2web.css">
 <style>
 .search-layer {
-  top: 100px;
+  top: 135px;
   left: .5em;
 }
 .ol-touch .search-layer {
-  top: 130px;
+  top: 180px;
 }
 </style>
         <style>
@@ -40,6 +40,16 @@
             border-top: none !important;
             background: rgba(255, 255, 255, 0.5) !important;
             color: black !important;
+        }
+        </style>
+
+        <style>
+        .geolocate {
+            top: 65px;
+            left: .5em;
+        }
+        .ol-touch .geolocate {
+            top: 80px;
         }
         </style>
 <style>
@@ -76,12 +86,12 @@
   border-top-color: #ffcc33;
 }
 .measure-control {
-  top: 65px;
+  top: 100px;
   left: .5em;
   display: flex;
 }
 .ol-touch .measure-control {
-  top: 80px;
+  top: 130px;
 }
 .measure-control label {
   padding: 1px;
@@ -110,8 +120,8 @@
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/waldsiedlungfreifl_3.js"></script><script src="layers/Gemeinden_4.js"></script><script src="layers/waldsiedlungfreifl_5.js"></script><script src="layers/Gemeinden_6.js"></script><script src="layers/Strassen_7.js"></script><script src="layers/FahrradwegeNeustadt_8.js"></script><script src="layers/RadwegeUmfrage_9.js"></script><script src="layers/ZusammengefassterLayer_10.js"></script>
-        <script src="styles/waldsiedlungfreifl_3_style.js"></script><script src="styles/Gemeinden_4_style.js"></script><script src="styles/waldsiedlungfreifl_5_style.js"></script><script src="styles/Gemeinden_6_style.js"></script><script src="styles/Strassen_7_style.js"></script><script src="styles/FahrradwegeNeustadt_8_style.js"></script><script src="styles/RadwegeUmfrage_9_style.js"></script><script src="styles/ZusammengefassterLayer_10_style.js"></script>
+        <script src="layers/Gemeinden_1.js"></script><script src="layers/RadwegeUmfrage_2.js"></script><script src="layers/ErfassteRadwege_3.js"></script>
+        <script src="styles/Gemeinden_1_style.js"></script><script src="styles/RadwegeUmfrage_2_style.js"></script><script src="styles/ErfassteRadwege_3_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
